--- a/index.html
+++ b/index.html
@@ -6,15 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hangman-Game</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="assets/javascript/game.js"></script>
 </head>
 
 <body>
     <div id="container">
-
-    </div>
+        <div class="game-box">
+            <div class="martial-arts">
+                <h1 class="hangman">Martial Art's Hangman</h1>
+            </div>
+            <div class="game-details">
+                <h3 class="press">Press any key to get started!</h3>
+                <h3 class="wins">Wins</h3>
+                <h3 class="current">Current Word</h3>
+                <div class="current-word">
+                    <input type="text" id="current-word" onkeyup="myFunction()">
+                </div>
+                <h3 class="number">Number of guesses remaining</h3>
+                <h3 class="letters">Letters already guessed</h3>
+            </div>
+        </div>
 </body>
 
 </html>
