--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
     <div id="container">
         <div class="game-box">
             <div class="martial-arts">
-                <h1 class="hangman">Martial Art's Hangman</h1>
+                <h1 class="hangman">Mortal Kombat Hangman</h1>
             </div>
             <div class="game-details">
                 <h3 class="press">Press any key to get started!</h3>
                 <h3 class="wins">Wins</h3>
+                <div id="wins"></div>
                 <h3 class="current">Current Word</h3>
                 <div class="current-word">
-                    <input type="text" id="current-word" onkeyup="myFunction()">
+                    <div id="current-word"></div>
                 </div>
                 <h3 class="number">Number of guesses remaining</h3>
+                <div id="guesses"></div>
                 <h3 class="letters">Letters already guessed</h3>
+                <div id="letters"></div>
+
             </div>
         </div>
 </body>
