--- a/index.html
+++ b/index.html
@@ -19,17 +19,29 @@
                 <h1 class="hangman">Mortal Kombat Hangman</h1>
             </div>
             <div class="game-details">
+                <img class="mortal-kombat" src="assets/images/Mortal_Kombat_Logo.svg.png">
                 <h3 class="press">Press any key to get started!</h3>
                 <h3 class="wins">Wins</h3>
-                <div id="wins"></div>
-                <h3 class="current">Current Word</h3>
-                <div class="current-word">
-                    <div id="current-word"></div>
+                <div id="wins">
+
                 </div>
+                <h3 class="current">Current Word</h3>
+
+                <div class="underline">
+
+                </div>
+                <div class="correctGuess">
+
+                </div>
+
                 <h3 class="number">Number of guesses remaining</h3>
-                <div id="guesses"></div>
+                <div id="guesses">
+
+                </div>
                 <h3 class="letters">Letters already guessed</h3>
-                <div id="letters"></div>
+                <div id="letters">
+
+                </div>
 
             </div>
         </div>
